# CodexProject

AutoSearchPromptAgent/: README.md  index.html  package.json
AutoSearchPromptAgent/docs/: ARCHITECTURE.md
AutoSearchPromptAgent/scripts/: check.mjs  serve.mjs
AutoSearchPromptAgent/src/: App.css  app.js  data.js  workflow.js
CatBaby/: .gitignore  README.md  requirements.txt  server.py  关闭CatBaby.bat  启动CatBaby.bat
CatBaby/catbaby/: app.py  http_server.py  models.py  monitor.py  rules.py  storage.py
CatBaby/config/: default_rules.json
CatBaby/docs/: DESIGN.md
DataAnalysis/: README.md  database.py  main.py  requirements.txt  start_backend.bat
DataPulse/: .gitignore  config_env.py  init_db.py  seed_data.py  start_frontend.bat
MobileConnectTestPlatform/: .gitignore  README.md  pyproject.toml  requirements.txt
MobileConnectTestPlatform/configs/: testbed.example.yaml
MobileConnectTestPlatform/docs/: ai-tool-architecture.md  deliverables.md  test-strategy.md
MobileConnectTestPlatform/mobly_tests/: bluetooth_pairing_template.py
MobileConnectTestPlatform/scripts/: doctor.cmd  doctor.ps1  run_android_smoke.cmd  run_android_smoke.ps1  run_smoke.cmd  run_smoke.ps1
MobileConnectTestPlatform/src/connect_lab/: __init__.py  adb.py  analysis.py  appium_driver.py  artifacts.py  cli.py  config.py  defect.py  diagnosis.py  privacy.py  reporting.py  retest.py  scenarios.py
MobileConnectTestPlatform/tests/: conftest.py  test_android_connection_smoke.py  test_defect_retest.py  test_diagnosis.py  test_environment.py  test_reporting.py  test_scenarios.py
(+121 files in other folders)
