[project]
name = "mobile-connect-test-platform"
version = "0.1.0"
description = "Lightweight mobile connectivity test platform for Android, Appium, Mobly, and pytest."
requires-python = ">=3.12"
dependencies = [
  "pytest>=9.0",
  "pytest-html>=4.0",
  "allure-pytest>=2.0",
  "PyYAML>=6.0",
  "adbutils>=2.0",
  "Appium-Python-Client>=5.0",
  "mobly>=1.13",
  "rich>=15.0",
]

[project.scripts]
connect-lab = "connect_lab.cli:main"

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "android: tests that require a connected Android device",
  "bluetooth: Bluetooth connectivity tests",
  "car: car connectivity tests or templates",
  "smoke: quick health checks",
]
